--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 
 <body>
 
+    <!-- Header -->
+    <header>
+        <div>
+            <h1 id="title">GIALLO BOOLEANO</h1>
+        </div>
+    </header>
 </body>
 
 </html>
