creato layout sezione recipe

--- a/index.html
+++ b/index.html
@@ -29,6 +29,30 @@
             <h1 id="title">GIALLO BOOLEANO</h1>
         </div>
     </header>
+
+    <!-- Main -->
+    <main>
+
+        <!-- Container -->
+        <div class="container">
+
+            <!-- Recipe -->
+            <section id="recipe">
+                <span class="categories"><a href="#">DOLCI E DESSERTS</a></span>
+                <h1 id="recipe-title">Tiramisù (Dolce Tradizionale)</h1>
+
+                <div class="row">
+                    <div class="col-left">
+
+                    </div>
+                    <div class="col-right">
+
+                    </div>
+                </div>
+            </section>
+
+        </div>
+    </main>
 </body>
 
 </html>
