creazione layout sezione socials

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
 
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,6 +56,24 @@
                 </div>
             </section>
 
+            <!-- Socials -->
+            <section id="socials">
+                <a class="btn" href="#">
+                    <i class="fa-brands fa-facebook" style="color: #1a77f3;"></i><span>FACEBOOK</span>
+                </a>
+                <a class="btn" href="#">
+                    <i class="fa-brands fa-twitter" style="color: #009eff;"></i><span>TWITTER</span>
+                </a>
+                <a class="btn" href="#">
+                    <i class="fa-brands fa-instagram" style="color: #dc3d78;"></i><span>INSTAGRAM</span>
+                </a>
+                <a class="btn" href="#">
+                    <i class="fa-brands fa-pinterest" style="color: #e62222;"></i><span>PINTEREST</span>
+                </a>
+                <a class="btn" href="#">
+                    <i class="fa-brands fa-youtube" style="color: #e62222;"></i><span>YOUTUBE</span>
+                </a>
+            </section>
         </div>
     </main>
 </body>
