creata sezione ads

--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
                     <i class="fa-brands fa-youtube" style="color: #e62222;"></i><span>YOUTUBE</span>
                 </a>
             </section>
+
+            <!-- ADS -->
+            <section id="ads">
+                <div class="ads-box">
+                    <img src="img/banner.png" alt="Banner pubblicitario" class="banner-ads">
+                </div>
+            </section>
+
+            
         </div>
     </main>
 </body>
