--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span class="categories"><a href="#">DOLCI E DESSERTS</a></span>
                 <h1 id="recipe-title">Tiramisù (Dolce Tradizionale)</h1>
 
-                <div class="row">
+                <div class="recipe-row">
                     <div class="col-left">
 
                     </div>
@@ -89,9 +89,36 @@
                 <img src="img/tiramisu.jpg" alt="Immagine di un tiramisù" class="object-img">
 
                 <p>Back in the days grandmother used to prepare a breakfast that we might call humble today, but was considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg into glass, beat it with sugar, and add coffee or hot milk, for children, or <strong>Marsala wine </strong>or anised for adults. This marvelous cream gave rise to mascarpone cream used to make <strong>Tiramisù </strong>(mascarpone cheese and ladyfingers dessert). This is the <strong>best italian dessert</strong>, the most popular and beloved of them all, and it has also birthed many other versions, even an egg-free Tiramisù! Thre is also a strawberry and Nutella Tiramisù! Although the origins of this famous dessert are unclear, because it is disputed between the regions of Veneto, Friuli-Venezia Giulia, Piedmont, and Tuscany, it remains a cornerstone of italian cuisine and it's widely prepared from North to South. Unfortunately, we weren't able to find out who invented it, but we can certainly teach you how to prepare your best Tiramisù ever. So here's the recipe: try it and let us know what you think!</p>
-            </section>
-            
+            </section> 
         </div>
+
+        <!-- Footer -->
+        <footer>
+            <div class="footer-row">
+                <div class="address">
+
+                </div>
+                <div class="links">
+                    <ul class="links-list">
+                        <li>
+                            <a href="#">About us</a>
+                        </li>
+                        <li>
+                            <a href="#">Terms of use</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Cookie Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Discalimer</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
