header responivness mobile aggiunta

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Recipe -->
             <section id="recipe">
                 <span class="categories"><a href="#">DOLCI E DESSERTS</a></span>
-                <h1 id="recipe-title">Tiramisù (Dolce Tradizionale)</h1>
+                <h1 id="recipe-title">Tiramisù <span class="dessert-type">(Dolce Tradizionale)</span></h1>
 
                 <div class="recipe-row">
                     <div class="col-left">
