--- a/index.html
+++ b/index.html
@@ -50,10 +50,15 @@
 
                 <div class="recipe-row">
                     <div class="col-left">
-
+                        <img src="img/image (10).png" alt="Video preparazione Tiramisù" class="recipe-video">
                     </div>
                     <div class="col-right">
-
+                        <h4>In breve</h4>
+                        <span>Difficoltà: <strong>Facile</strong></span>
+                        <span>Tempo: <strong>40 min</strong></span>
+                        <span>Porzione per: <strong>8 persone</strong></span>
+                        <span>Costo: <strong>contenuto</strong></span>
+                        <span><strong>Note: </strong>+2 ore di riposo in frigo</span>
                     </div>
                 </div>
             </section>
