--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
             <section id="description">
                 <h2>PRESENTATION</h2>
 
-                <img src="img/tiramisu.jpg" alt="Immagine di un tiramisù" class="object-img">
+                <div class="divider"></div>
 
-                <p>Back in the days grandmother used to prepare a breakfast that we might call humble today, but was
+                <p class="clearfix"><img src="img/tiramisu.jpg" alt="Immagine di un tiramisù" class="object-img">
+                    Back in the days grandmother used to prepare a breakfast that we might call humble today, but was
                     considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg
                     into glass, beat it with sugar, and add coffee or hot milk, for children, or <strong>Marsala wine
                     </strong>or anised for adults. This marvelous cream gave rise to mascarpone cream used to make
@@ -108,7 +109,8 @@
                     Veneto, Friuli-Venezia Giulia, Piedmont, and Tuscany, it remains a cornerstone of italian cuisine
                     and it's widely prepared from North to South. Unfortunately, we weren't able to find out who
                     invented it, but we can certainly teach you how to prepare your best Tiramisù ever. So here's the
-                    recipe: try it and let us know what you think!</p>
+                    recipe: try it and let us know what you think!
+                </p>
             </section>
         </div>
 
