responsiveness tablet aggiunta alla sezione footer

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
         <footer>
             <div class="footer-row">
                 <div class="address">
-
+                    <span class="agency">&copy; 2021 Giallo Booleano S.p.a</span><br>
+                    <span>Via Tal dei Tali, 10 - 88046 Lamezia Terme - VAT 43940293020</span>
                 </div>
                 <div class="links">
                     <ul class="links-list">
